# HybridTrade

./: .gitignore  README.md
.skills/agents/: coordinator.md  evidence_verifier.md  kuromi.md  report_synthesizer.md  source_scout.md  technical_analyst.md
.skills/commands/: chrome-devtools.md  forex-research.md  test_skills.md
.skills/common/: 00-runtime.md  01-capabilities.md  02-compaction.md
docs/: agent-cli.md  backend-rust.md  dong-bo-backend-frontend.md  frontend-nextjs.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
paint/: untitled.pen
rust/: Cargo.toml  hello_kuromi.txt
rust/agent-cli/: Cargo.toml
rust/agent-cli/src/: main.rs
rust/server/: Cargo.toml
rust/server/migrations/: 0001_init.sql  0002_instruments.sql  0002_rewrite_schema.sql  0003_drop_investigations.sql  0004_agent_task_schedules.sql  0005_schedule_filters.sql
rust/server/src/: api.rs  config.rs  db.rs  events.rs  main.rs  models.rs  providers.rs  runner.rs  scheduler.rs  skills.rs  tool_runtime.rs
rust/server/src/agents/: mod.rs  models.rs  skills.rs
rust/server/src/agents/providers/: capabilities.rs  history.rs  hub.rs  mod.rs  prompt.rs  protocols.rs
rust/server/src/agents/providers/team/: executor.rs  mod.rs  models.rs  prompt.rs  session.rs
rust/server/src/agents/tool_runtime/: mcp.rs  mod.rs  native.rs  runtime.rs  utils.rs
rust/server/src/agents/tool_runtime/tools/: bash.rs  exec.rs  fetch_calendar.rs  fetch_dashboard.rs  fetch_news.rs  mod.rs  read.rs  reusable_skills.rs  spawn_team.rs  update_dashboard.rs  write.rs
(+68 files in other folders)
